# n.ex.t-38th

gornir_w_goeapi/: .gitignore  go.mod  go.sum  main.go
gornir_w_goeapi/config/: inventory.yaml
gornir_w_goeapi/tasks/: task_show_all.go  task_show_interfaces.go  task_show_version.go  task_show_vlan.go
gornir_w_goeapi/util/: custom_render_results.go  db_util.go
nornir_w_pyeapi/: .gitignore  main.py  pyproject.toml
nornir_w_pyeapi/config/: config.yaml  groups.yaml  hosts.yaml
nornir_w_pyeapi/tasks/config/: __init__.py  interfaces.py
nornir_w_pyeapi/tasks/get/: __init__.py  interfaces.py  running_config.py  version.py
nornir_w_pyeapi/utils/: __init__.py  commands.py  display_results.py  pyeapi_conn.py
nornir_w_pyeapi/utils/database/: __init__.py  db_conn.py  models.py
