[project]
name = "nornir_w_eapi"
version = "0.1.0"
description = "Network automation using Nornir and pyeapi"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "nornir>=3.3.0",
    "pyeapi>=0.8.4",
    "nornir-utils>=0.2.0",
    "nornir-jinja2>=0.2.0",
    "nornir-netmiko>=0.2.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py38"
